# comp-dist-av2

./: .gitignore  pyproject.toml
lista_docker/2/: README.md  docker-compose.yaml  nginx.conf
lista_docker/3/: docker-compose.yaml  graphics.ipynb  nginx.conf
lista_docker/3/data/: 10w10u_requests.csv  10w175u_requests.csv  10w350_requests.csv  10w50u_requests.csv  1w10u_requests.csv  1w175u_requests.csv  1w350u_report.html  1w350u_requests.csv  1w50u_report.html  1w50u_requests.csv  3w10u_requests.csv  3w175u_requests.csv  3w350u_requests.csv  3w50u_report.html  3w50u_requests.csv  5w10u_requests.csv  5w175u_requests.csv  5w350u_report.html  5w50u_report.html  5w50u_requests.csv  5w_requests.csv
lista_docker/3/locust-scripts/: locust-script.py
lista_docker/3/resultados/: 10w10u_report.html  10w175u_report.html  10w350u_report.html  10w50u_report.html  1w10u_report.html  1w175u_report.html  3w10u_report.html  3w175u_report.html  3w350u_report.html  5w10u_report.html  5w175u_report.html
lista_docker/4/: README.md  graphs.ipynb  locustfile.py
