[project]
name = "comp-dist-av2"
version = "0.1.0"
description = ""
authors = [
    {name = "filipe-ts",email = "filipets@live.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "locust (>=2.42.0,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "notebook (>=7.4.7,<8.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
